# potpourri

LINQPad Queries/: guid.linq
azure/: AcquireTokenUsingPowershellAppId.ps1  AssignRoleToSP.ps1  CreateAppAndGetToken.ps1  getTokenAuthCodeFlow.py  get_token_curl_command.sh  invoke_delta_feed.ps1  notes.md  remove_role_from_user.ps1
bash/: curl_commands.sh
c/HelloWorld/: .gitignore  CMakeLists.txt
c/HelloWorld/src/: CMakeLists.txt
c/alloc/: myalloc.c  myalloc.h
cmd/: curl.cmd
cpp/practice/multi-threading/: pthreads.cpp  std_thread.cpp
cpp/practice/word_count/: word_count.cpp
cpp/simpledb/: CMakeLists.txt
cpp/simpledb/include/: bplustree.h
cpp/simpledb/libs/index/: bplustree.cpp
cpp/simpledb/src/server/: Main.cpp
dotnet/CSharpWebHostConsoleApp/: CSharpWebHostConsoleApp.sln  README.txt
dotnet/CSharpWebHostConsoleApp/CalcClient/: App.config  CalcClient.csproj  Program.cs
dotnet/CSharpWebHostConsoleApp/CalcCommon/: ICalc.cs  (+2 more)
dotnet/CompileAPIDemo/: CompileAPIDemo.sln
dotnet/GetToken/: oauthclient.sln
dotnet/PInvokeDemo/: PInvokeDemo.sln
dotnet/Pong/: Program.cs  References.md
dotnet/WpfCalculator/: WpfCalculator.sln
java/: .project
node/hello-world/: package-lock.json  package.json
powershell/: learning.ps1
python/: Image_misc.py  data_comparision.py  decorators.py  generate_graph.py  mandelbrot.py  mandelbrot1.py  monte_carlo_simulation_demo.py  morse_code_sound.py  python_gui.py  string_reverse.py  url_decode.py
python/aad_snippets/: getTokenAndMakeGraphCall.py
python/network/: http_request.py
python/scripts/: Image_misc.py
(+30 files in other folders)
